# Wh0

./: .gitignore  README.md  pyproject.toml
WM-H/: README.md  requirements.txt
WM-H/configs/: pipeline.single_gpu.yaml  pipeline.yaml  video.single_gpu.yaml  video.yaml  video_hand_edit.yaml
WM-H/scripts/: run_local_producer_consumer.py  run_video_hand_edit.sh  run_wmh.sh  run_wmh_8gpu_50k.sh  run_wmh_single_gpu.sh
WM-H/tests/: __init__.py  test_word_database.py
WM-H/utils/: __init__.py  instruction_diversity.py  word_database.py
WM-H/wm_h/: __init__.py  bbox_coords.py  box_editor.py  box_placement.py  hand_detector.py  instr_first.py  instr_first_pipeline.py  instruction_builder.py  io_utils.py  logging_utils.py  parallel.py  run_instr_first.py  run_streaming_video.py  run_video_generator.py  run_video_hand_edit.py  schema.py  slot_database.py  slot_templates.py  streaming.py  terminal_ui.py  text_llm.py  video_prompt_preparer.py  video_prompts.py  vllm_backend.py
WM-H/wm_h/prompts/: bimanual_decompose.txt  slot_expand_template.txt
WM-H/wm_h/video/: __init__.py  common.py  cuda.py  generator.py  hand_edit.py  preparer.py
assets/debug_eval/g1_dataset/: split_points.json
assets/debug_eval/wm-h/annotations/: WM-H_gpu0_task000000_ep_000000.npy  WM-H_gpu0_task000000_ep_000001.npy  WM-H_gpu0_task000000_ep_000002.npy
configs/: eval_pipeline_presets.json  project_request.example.yaml  validation.yaml  weights_manifest.json
libs/: __init__.py
libs/dataset_index/: __init__.py  episodic.py  g1.py  wmh_split.py
libs/eval_pipeline/: __init__.py  annotation.py  dataset.py
libs/hand_recon/: __init__.py  config.py  core.py  hawor.py  mano.py  megasam.py  moge.py  paths.py
scripts/: agent_run.sh  download_weights.sh  run_all.sh  run_annotate.sh  run_eval_pipeline.sh  run_from_config.sh  run_human_inference.sh  run_train.sh  run_visualize_training_data.sh  run_wmh.sh  setup.sh
tools/agent/: agent_wizard.py
tools/dataset/: build_episode_index.py  build_g1_index.py  split_wmh_episodes.py
tools/orchestrator/: project_orchestrator.py
tools/setup/: sync_third_party.sh
tools/validation/: validate_environment.py  validate_environment.sh
tools/weights/: manage_weights.py
tools/wmh/: annotate_wmh_videos.py  prepare_wmh_training_data.py
vitra-wh0/: README.md  pyproject.toml
vitra-wh0/data/: data.md  demo_visualization_epi.py
vitra-wh0/deployment/: client.py  model_server.py  paths.py
vitra-wh0/scripts/: inference_human_prediction.py  run_human_pretrain.sh  run_robot_finetune.sh  run_robot_wmh_finetune.sh  train.py
vitra-wh0/visualization/: visualize_core.py
vitra-wh0/vitra/configs/: human_pretrain.json  robot_finetune.json  robot_finetune_debug.json  robot_finetune_wmh.json
vitra-wh0/vitra/datasets/: coord_trans.py  data_mixture.py  dataset.py  dataset_utils.py  human_dataset.py  materialize.py  robot_dataset.py
vitra-wh0/vitra/models/: vla_builder.py
vitra-wh0/vitra/models/vla/: vitra_paligemma.py
vitra-wh0/vitra/tools/: __init__.py  human_prediction_pipeline.py  render_hand_dataset.py
vitra-wh0/vitra/training/: fsdp.py
vitra-wh0/weights/mano/: mano_mean_params.npz
