[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wh0"
version = "0.1.0"
description = "Wh0 synthetic hand-centric video data generation, annotation, and VITRA policy training."
readme = "README.md"
requires-python = ">=3.10.1,<3.12"
authors = [
    { name = "chenyt31", email = "978396637@qq.com" },
]
dependencies = [
    "numpy<2.0",
    "pyyaml>=6.0.2",
    "pillow>=10.0",
    "tqdm>=4.65",
    "opencv-python-headless>=4.8",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "ffmpeg-python>=0.2",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "huggingface-hub>=0.24",
    "safetensors>=0.4",
    "einops>=0.7",
    "jsonlines>=4.0",
    "json-numpy>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Pick exactly one CUDA extra after checking `nvidia-smi`.
# These extras only install PyTorch wheels; CUDA-sensitive packages such as vLLM,
# flash-attn, PyTorch3D, and DROID-SLAM still need validation on the target host.
cu121 = [
    "torch==2.3.0",
    "torchvision==0.18.0",
    "torchaudio==2.3.0",
]
cu124 = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]
cu128 = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
]
policy = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.1.1",
    "deepspeed==0.16.5",
    "tensorboard>=2.13.0",
    "tensorboardX>=2.6.2",
    "transformers>=4.56.1,<5.0",
    "diffusers>=0.31.0",
    "wandb>=0.19.0",
    "sentence-transformers==2.2.2",
    "open-clip-torch==2.20.0",
    "datasets==2.12.0",
    "draccus==0.8.0",
    "peft==0.11.1",
    "protobuf",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "tokenizers>=0.21",
    "decord",
    "scikit-image",
    "brotli",
    "pympler",
    "ultralytics",
    "pytorch-lightning",
    "yacs",
    "utils3d",
]
wmh = [
    "diffsynth",
    "transformers>=4.56.1,<5.0",
    "qwen-vl-utils==0.0.14",
    "accelerate",
    "safetensors",
    "ultralytics",
]
wmh-vllm = [
    "vllm==0.8.5",
    "bitsandbytes>=0.46.1",
]
annotation = [
    "moge",
    "smplx",
    "yacs",
    "ultralytics",
    "chumpy",
    "lap>=0.5.12",
]
visualization = [
    "smplx",
    "projectaria-tools",
    "chumpy",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/chenyt31/Wh0"

[tool.uv]
package = false
conflicts = [
    [
        { extra = "cu121" },
        { extra = "cu124" },
        { extra = "cu128" },
    ],
    [
        { extra = "cu121" },
        { extra = "wmh-vllm" },
    ],
    [
        { extra = "cu128" },
        { extra = "wmh-vllm" },
    ],
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]

[tool.uv.sources]
vitra = { path = "vitra-wh0", editable = true }
diffsynth = { path = "WM-H/third_party/DiffSynth-Studio", editable = true }
moge = { git = "https://github.com/microsoft/MoGe.git" }
utils3d = { git = "https://github.com/EasternJournalist/utils3d.git", rev = "3fab839f0be9931dac7c8488eb0e1600c236e183" }
chumpy = { git = "https://github.com/mattloper/chumpy.git" }
torch = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
